--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "debug": "ndb app.js"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "connect-flash": "^0.1.1",
@@ -26,6 +27,8 @@
     "ndb": "^1.1.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.5.0"
+    "request": "^2.88.2",
+    "serve-favicon": "^2.5.0",
+    "xhr2": "^0.2.1"
   }
 }
