--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "debug": "~4.1.1",
     "ejs": "~2.5.2",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.1",
     "express-validator": "^2.21.0",
     "moment": "^2.27.0",
@@ -27,6 +28,7 @@
     "ndb": "^1.1.5",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "pdf-creator-node": "^2.3.4",
     "request": "^2.88.2",
     "serve-favicon": "^2.5.0",
     "xhr2": "^0.2.1"
